// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: challenge-authenticator with titleKey: oie.on_prem.verify.title and titleKeyParams: ["SecureID"] 1`] = `
{
  "data": {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.on_prem.verify.title",
        },
        "type": "Title",
      },
      {
        "dir": "ltr",
        "options": {
          "inputMeta": {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: challenge-authenticator with titleKey: oie.on_prem.verify.title and titleKeyParams: ["oie.on_prem.authenticator.default.vendorName"] 1`] = `
{
  "data": {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.on_prem.verify.title",
        },
        "type": "Title",
      },
      {
        "dir": "ltr",
        "options": {
          "inputMeta": {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "challenge-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: enroll-authenticator with titleKey: oie.on_prem.enroll.title and titleKeyParams: ["SecureID"] 1`] = `
{
  "data": {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      {
        "dir": "ltr",
        "options": {
          "inputMeta": {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should add appropriate title and button elements for RSA Remediation step: enroll-authenticator with titleKey: oie.on_prem.enroll.title and titleKeyParams: ["oie.on_prem.authenticator.default.vendorName"] 1`] = `
{
  "data": {
    "credentials.clientData": "rsa_username",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      {
        "dir": "ltr",
        "options": {
          "inputMeta": {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "enroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`transformRSAAuthenticator tests should clear password field when change token error is present in transaction 1`] = `
{
  "data": {
    "credentials.clientData": "rsa_username",
    "credentials.passcode": "",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.on_prem.enroll.title",
        },
        "type": "Title",
      },
      {
        "dir": "ltr",
        "options": {
          "inputMeta": {
            "name": "credentials.clientData",
            "value": "rsa_username",
          },
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
